# urdf-trajectory-exporter

./: README.md  pyproject.toml
src/urdf_trajectory_exporter/: __init__.py  models.py  urdf_parser.py  writer.py
tests/: __init__.py  test_writer.py
